Add unlink relationship tools
